# AeroShare-API

./: .gitignore  Cargo.toml  README.md  README.pl.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs
