[workspace]
members = [
    "server",
    "client",
    "shared",
]

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
