[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = "0.21"
walkdir = "2.4"
tokio-util = { version = "0.7", features = ["io"] }
