[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
futures-util = { workspace = true }
rand = { workspace = true }
tokio-stream = { workspace = true }
http-body-util = { workspace = true }
